<resources>
    <string name="app_name">TestTwo1</string>
    <string name="linear_layout">线性布局</string>
    <string name="horizontal_layout">水平布局</string>
    <string name="vertical_layout">垂直布局</string>
    <string name="left_layout">靠左对齐</string>
    <string name="relative_layout">相对布局</string>
    <string name="btn1">第一个Button</string>
    <string name="btn2">第二个Button</string>
    <string name="btn3">第三个Button</string>
    <string name="btn4">第四个Button</string>
    <string name="frame_layout">帧布局</string>
    <string name="table_layout">表格布局</string>
    <string name="grid_layout">网格布局</string>
    <string name="name">谢晓琳</string>
    <string name="back">返回</string>
</resources>
