<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="422dp"
        android:layout_height="0dp"
        android:layout_marginBottom="101dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <Button
            android:id="@+id/widget1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/widget2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/widget1"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/widget3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/widget1"
            android:layout_alignLeft="@+id/widget1"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/widget4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/widget2"
            android:layout_alignLeft="@+id/widget2"
            android:layout_alignTop="@+id/widget3"
            android:layout_toRightOf="@+id/widget3"
            android:text="@string/btn4" />

    </RelativeLayout>

    <Button
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
</android.support.constraint.ConstraintLayout>